SERVER-91512 Preserve unowned values in BlockToRow::doSaveState (#24078)

GitOrigin-RevId: 483681531866d2684f684e78fff5296459b2fcd7